# sliver-sdk

./: .gitignore  README.md  go.mod  main.go
.github/workflows/: autorelease.yml
cmd/: completion.go  go.go  new-encoder.go  new-extension.go  new.go  root.go  rust.go  version.go
cmd/goext/: goExtension.go
cmd/rustext/: rust.go
sdk/: sdk.go
sdk/go/extension/: go.go
sdk/goext/: go.go  goext.go
sdk/rust/encoder/: rust.go  rust_encoder.go
sdk/rust/extension/: rust.go
sdk/rustext/: rust.go
templates/: templates.go
templates/encoders/rust/: Cargo.toml  Makefile  rename.rs
templates/extensions/go/: extension.json
templates/extensions/go/dll/: main.go
templates/extensions/go/pkg/parser/: parser.go
templates/extensions/rust/: Cargo.toml  README.md  extension.json
templates/extensions/rust/src/: lib.rs  myextension.rs
templates/go/: Makefile  README.md  main.go
templates/go/dll/: main.go
templates/go/pkg/myextension/: myextension.go
templates/go/pkg/parser/: parser.go
templates/rust/: extension.json
templates/rust/src/: lib.rs  main.rs  myextension.rs  parser.rs
