[package]
name = "{{.ExtensionName}}"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "{{.ExtensionName}}"
path = "src/lib.rs"
crate-type = ["cdylib"]

[[bin]]
name = "{{.ExtensionName}}-debug"
path = "src/main.rs"

[dependencies]
# Put your dependencies here

[profile.release]
opt-level = "z"
panic = "abort"
lto = true
codegen-units = 1
